﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 2.022005, see misc/*.deps* for details
 - develop: ↑18 (recommends: ↑1)
 - runtime: ↑21 -1
 - test: ↑1 (recommends: ↑1)

 [Internals]
 - No more MX::AttributeShortcuts

2.022005 2015-01-05T20:16:46Z cba7b74
 [Dependencies::Stats]
 - Dependencies changed since 2.022004, see misc/*.deps* for details
 - develop: +1 ↑18 -1
 - runtime: +1 ↑21 -1
 - test: ↑2

 [Minor]
 - Switch to Readme::Brief

2.022004 2015-01-02T03:00:30Z 07c5593
 [Dependencies::Stats]
 - Dependencies changed since 2.022003, see misc/*.deps* for details
 - develop: +1 ↑1
 - runtime: ↑4
 - test: +1

 [Minor]
 - use new travis generator
 - inject new travis generator into new dists
 - inject vim syntax stanza into new dists

2.022003 2014-12-29T11:33:17Z c7a0caa
 [Dependencies::Stats]
 - Dependencies changed since 2.022002, see misc/*.deps* for details
 - develop: +1 ↑22 (recommends: ↑1)
 - runtime: +1 ↑26
 - test: ↑1 (recommends: ↑1)

 [Minor]
 - Switch to Pod2Readme for shipped readme because I much prefer how it renders

2.022002 2014-12-14T09:15:08Z ed0dd28
 [Dependencies::Stats]
 - Dependencies changed since 2.022001, see misc/*.deps* for details
 - configure: ↑1
 - develop: ↑19
 - runtime: ↑22
 - test: ↑1

 [Minor]
 - Drop BuiltWith data from META.* and isolate in own file.

2.022001 2014-12-10T09:57:13Z d29ce03
 [00 Minor]
 - Drop ReadmeFromPod until its at least usable again.
 - Drop utf8 and 5.008 from the default module template.

 [Bugfix]
 - Make miniting profile tests happy by giving a valid abstract by default
 - Anticipate needing 5.006 as a prereq.

 [Dependencies::Stats]
 - Dependencies changed since 2.022000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: ↑29 -1 (recommends: ↑1, suggests: ↑1)
 - runtime: ↑37 -1
 - test: +1 ↑5 (recommends: ↑3)

2.022000 2014-10-25T09:54:57Z 784f4f1
 [00 Minor]
 - Replace EOLTests with Test::EOL

 [Dependencies::Stats]