@@ -55,6 +55,7 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / runtime requires]
  - MooseX::AttributeShortcuts 0.024
+ - MooseX::StrictConstructor 0.19
 
 2.022005 2015-01-05T20:16:46Z
  [Added / develop requires]
